Closed Bug 637992 Opened 14 years ago Closed 14 years ago

blacklist pruning may rehash in midst of iteration (crash!)

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: pnkfelix, Assigned: pnkfelix)

References

Details

(Whiteboard: has-patch)

Attachments

(1 file)

The blacklist facility is useful when it works. But it can currently break because in the loop of its pruning iteration, it calls GCHashtable::remove without overriding the default value for the rehash parameter. This is really easy to fix. (But better still to test the GCHashtable code more effectively by adding some debug state to fail-fast; will be filing separate bug for that shortly.)
(In reply to comment #0) > (But better still to test the GCHashtable code more effectively by adding some > debug state to fail-fast; will be filing separate bug for that shortly.) Filed as Bug 637993.
Assignee: nobody → fklockii
Attached patch simple patchSplinter Review
See 637993 for start of testing strategy
Comment on attachment 516146 [details] [diff] [review] simple patch (i considered making a selftest to illustrate, but i'm not certain that is reasonable to do so. If prodded I will give it a shot.)
Attachment #516146 - Flags: review?(treilly)
Whiteboard: has-patch
Blocks: 637695
See Also: → 637993
Attachment #516146 - Flags: review?(treilly) → review+
changeset: 6032:4fc125271e47 user: Felix S Klock II <fklockii> summary: Bug 637992: blacklist fix, delay pruning to post-iteration (r=treilly). http://hg.mozilla.org/tamarin-redux/rev/4fc125271e47
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: