Bug 637992: blacklist fix, delay pruning to post-iteration (r=treilly).